--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" title="Repositório GItHub dp professor" rel="external" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" title="Site do Curso em Vídeo" rel="external" target="_blank">CursoemVídeo</a></p>
+        <p>Site criado por <a href="https://github.com/felipetoshio01" title="Perfil no GitHub" rel="external" target="_blank">Felipe Toshio</a> para o <a href="https://www.cursoemvideo.com/" title="Site do Curso em Vídeo" rel="external" target="_blank">CursoemVídeo</a></p>
     </footer>
 </body>
 </html>
