Mudando os links do Footer

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     </main>
     <footer>
         <p>Site criado por <a href="https://github.com/felipetoshio01" title="Perfil no GitHub" rel="external" target="_blank">Felipe Toshio</a> para o <a href="https://www.cursoemvideo.com/" title="Site do Curso em Vídeo" rel="external" target="_blank">CursoemVídeo</a></p>
+        <p>Confira também minha amiga <a href="https://github.com/Medina-10" target="_blank" rel="external" title="Conta GitHub da Medina">Medina no GitHub</a></p>
     </footer>
 </body>
 </html>
